--- a/views/index.html.erb
+++ b/views/index.html.erb
@@ -4,20 +4,20 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
+  <title>Stalker</title>
   <meta name="description" content="Flatiron Presents: Cassie and Kana">
-  <meta name="author" content="SitePoint">
+  <meta name="author" content="Cassie Tarakajian - Kana Abe">
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
 
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 </head>
 
-<body> 
+<body>
 
-RESPONSE..</br>
+<h2>RESPONSE..</h2>
 
 <%= @r %>
 
