--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -8,7 +8,9 @@
   <meta name="description" content="Flatiron Presents: Cassie and Kana">
   <meta name="author" content="Cassie Tarakajian - Kana Abe">
 
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
+  <%= css :application %>
+  <%= js :application %>
 
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
