--- a/app/views/results.html.erb
+++ b/app/views/results.html.erb
@@ -19,6 +19,8 @@
 
 <body class="col-xs-12">
 <div class="col-xs-12 text-center">
+
+<img src="http://ruby006.students.flatironschool.com/<%= @profile.img_url %>">
 <h2>STALKER RESULTS...</h2>
 
 <%= @profile.name %></br>
@@ -33,7 +35,7 @@
 
 <ul class="unstyled">
 <% @tweets.each do |tweet| %>
-<li><%= tweet.text %></li>
+<li><%= tweet.text %> - <%= tweet.created_at.strftime("%A, %d %b %Y %l:%M %p") %></li>
 <% end %>
 </ul>
 
