--- a/app/views/results.html.erb
+++ b/app/views/results.html.erb
@@ -3,11 +3,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
   <title>Stalker</title>
   <meta name="description" content="Flatiron Presents: Cassie and Kana">
   <meta name="author" content="Cassie Tarakajian - Kana Abe">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
   <%= css :application %>
   <%= js :application %>
@@ -17,34 +18,39 @@
   <![endif]-->
 </head>
 
-<body class="col-xs-12">
-<div class="col-xs-12 text-center">
-<h2>STALKER RESULTS...</h2>
+<body>
+  <div class="container">
+    <div class="container col-xs-12 text-center">
+    <h2>STALK RESULTS</h2>
 
-<%= @profile.name %></br>
-<%= @profile.quote %></br>
-<%= @profile.education %></br>
-<%= @profile.work %></br>
-<%= @profile.biography %></br>
-</div>
+    <%= @profile.name %></br>
+    <%= @profile.quote %></br>
+    <%= @profile.education %></br>
+    <%= @profile.work %></br>
+    <%= @profile.biography %></br>
+    </div>
 
-<div class="col-xs-12 text-center">
-<h3>LATEST TWEETS</h3>
+      <table class="striped">
+        <thead>
+          <tr><h3>LATEST TWEETS</h3></tr>
+        </thead>
+        <tbody>
+          <% @tweets.each do |tweet| %>
+          <tr><td><%= tweet.text %></td></tr>
+          <% end %>
+        </tbody>
+      </table>
 
-<ul class="unstyled">
-<% @tweets.each do |tweet| %>
-<li><%= tweet.text %></li>
-<% end %>
-</ul>
-
-</div>
-<div class="col-xs-12 text-center">
-<h3>LATEST GITHUB ACTIVITY</h3>
-
-<% @github.each do |commit| %>
-<li><%= commit[0] %></li>
-<% end %>
-</div>
-
-</body>
+      <table class="striped">
+        <thead>
+          <tr><h3>LATEST GITHUB ACTIVITY</h3></tr>
+        </thead>
+        <tbody>
+          <% @github.each do |commit| %>
+          <tr><td><%= commit[0] %></td></tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </body>
 </html>
