--- a/app/views/results.html.erb
+++ b/app/views/results.html.erb
@@ -38,7 +38,7 @@
     </div>
     <div class="row">
 
-      <table class="striped">
+      <table class="table table-striped">
         <thead>
           <tr><h3>LATEST TWEETS</h3></tr>
         </thead>
@@ -54,7 +54,7 @@
     </div>
     
     <div class="row">
-      <table class="striped">
+      <table class="table table-striped">
         <thead>
           <tr><h3>LATEST GITHUB ACTIVITY</h3></tr>
         </thead>
