--- a/app/views/results.html.erb
+++ b/app/views/results.html.erb
@@ -60,7 +60,8 @@
         </thead>
         <tbody>
           <% @github.each do |commit| %>
-          <tr><td><%= commit[0] %></td></tr>
+            <!-- <tr><td><%= commit[time].ago_in_words %></td></tr> -->
+            <tr><td><%= commit[0] %></td></tr>
           <% end %>
         </tbody>
       </table>
