--- a/app/views/results.html.erb
+++ b/app/views/results.html.erb
@@ -60,8 +60,10 @@
         </thead>
         <tbody>
           <% @github.each do |commit| %>
-            <tr><td><%=Time.xmlschema(commit[:time].to_s).ago_in_words %></td></tr>
-            <tr><td><%= commit[:content] %></td></tr>
+            <tr>
+              <td><%=Time.xmlschema(commit[:time].to_s).ago_in_words.strip %></td>
+              <td><%= commit[:content] %></td>
+            </tr>
           <% end %>
         </tbody>
       </table>
