--- a/app/views/home.html.erb
+++ b/app/views/home.html.erb
@@ -2,8 +2,11 @@
   <head>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <%= css :application %>
-    <%= js :application %>
+    <script type="text/javascript" src="javascripts/helpers.js"></script>
+    <script type="text/javascript" src="javascripts/microphone.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/microphone.min.css">
+    
 
     <title>Stalker</title>
     <meta name="description" content="Flatiron Presents: Cassie and Kana">
