--- a/app/views/results.html.erb
+++ b/app/views/results.html.erb
@@ -10,8 +10,10 @@
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
-  <%= css :application %>
-  <%= js :application %>
+  <script type="text/javascript" src="javascripts/helpers.js"></script>
+  <script type="text/javascript" src="javascripts/microphone.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/microphone.min.css">
 
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
